# hackathon_diary

api/: .env.example  README.md  api.md  compose.yml  pyproject.toml
api/db/: schema.sql
api/docs/: api.md  db.md  directly.md  directory.md
api/src/: config.py  main.py
api/src/auth/: deps.py  jwt.py
api/src/routers/: auth.py  protected.py  public.py
web/: .env.local.template  package-lock.json  package.json  tsconfig.json
web/src/app/: layout.tsx  page.tsx
web/src/app/api/bff/[...path]/: route.ts
web/src/app/api/proxy/: route.ts
web/src/components/: SignInButton.tsx  SignoutButton.tsx  TestButtons.tsx
web/src/lib/: auth.ts
